migrate hip interval

--- a/hip/Makefile.am
+++ b/hip/Makefile.am
@@ -149,6 +149,19 @@ MODIFIED_HIP_HDR = \
 	modified_include/hip/channel_descriptor.h \
 	modified_include/hip/hip_version.h
 
+BTX_HIP_GENERATED = \
+	btx_filter_hip/metababel/metababel.h \
+	btx_filter_hip/metababel/btx_component.h \
+	btx_filter_hip/metababel/btx_component.c \
+	btx_filter_hip/metababel/btx_upstream.h \
+	btx_filter_hip/metababel/btx_upstream.c \
+	btx_filter_hip/metababel/btx_downstream.h \
+	btx_filter_hip/metababel/btx_downstream.c \
+	btx_filter_hip/btx_main.c
+
+$(BTX_HIP_GENERATED) &: btx_model.yaml btx_interval_model.yaml btx_callbacks.yaml
+	$(METABABEL) -u $(srcdir)/btx_model.yaml -d $(srcdir)/btx_interval_model.yaml -t FILTER -o btx_filter_hip -p hipinterval -c interval --callbacks $(srcdir)/btx_callbacks.yaml -i hip.h.include
+
 $(MODIFIED_HIP_HDR) &: $(HIP_HDR) $(srcdir)/headers.patch
 	$(RM) -r modified_include/
 	cp -r $(srcdir)/include/ modified_include/
@@ -199,6 +212,7 @@ HIP_MODEL = \
 	$(srcdir)/../utils/LTTng.rb \
 	hip.h.include
 
+# TODO: Take this file and use the script to generate the new model version.
 hip_babeltrace_model.yaml: $(srcdir)/gen_babeltrace_hip_model.rb $(HIP_MODEL)
 	SRC_DIR=$(srcdir) $(RUBY) $< > $@
 
@@ -299,15 +313,14 @@ uninstall-hook:
 	-rmdir $(DESTDIR)$(pkglibdir)/bt2
 
 tmplibdir = $(libdir)/tmp
+
 tmplib_LTLIBRARIES = libBabeltraceHIP.la
+
 install-data-hook:
 	$(RM) -r $(DESTDIR)$(tmplibdir)
 
 babeltrace_hip_callbacks.h: $(top_srcdir)/utils/gen_babeltrace_callbacks.rb hip_babeltrace_model.yaml hip.h.include
 	SRC_DIR=$(srcdir) $(RUBY) $^ hip > $@
-
-BUILT_SOURCES += \
-	babeltrace_hip_callbacks.h
 
 babeltrace_hip_dispatchers.c: $(top_srcdir)/utils/gen_babeltrace_dispatchers.rb hip_babeltrace_model.yaml
 	SRC_DIR=$(srcdir) $(RUBY) $^ hip > $@
@@ -315,6 +328,9 @@ babeltrace_hip_dispatchers.c: $(top_srcdir)/utils/gen_babeltrace_dispatchers.rb 
 EXTRA_DIST += \
 	hip.h.include \
 	hip.map
+
+BUILT_SOURCES += \
+	babeltrace_hip_callbacks.h
 
 CLEANFILES += \
 	babeltrace_hip_callbacks.h \
@@ -352,64 +368,27 @@ CLEANFILES += \
 data_DATA = \
 	$(HIP_BINDINGS)
 
-babeltrace_hipinterval_callbacks.cpp: $(srcdir)/gen_hipinterval_callbacks.rb $(srcdir)/hipinterval_callbacks.cpp.erb hip_babeltrace_model.yaml
-	SRC_DIR=$(srcdir) $(RUBY) $< > $@
-
-babeltrace_hipinterval_callbacks.h: $(top_srcdir)/utils/gen_babeltrace_callbacks.rb hip_babeltrace_model.yaml hip.h.include
-	SRC_DIR=$(srcdir) $(RUBY) $^ hipinterval > $@
-
-babeltrace_hipinterval_dispatchers.c: $(top_srcdir)/utils/gen_babeltrace_dispatchers.rb hip_babeltrace_model.yaml
-	SRC_DIR=$(srcdir) $(RUBY) $^ hipinterval > $@
-
-babeltrace_hipinterval_emitter.h: $(top_srcdir)/utils/gen_babeltrace_emitter.rb $(top_srcdir)/xprof/interval_model.yaml
-	SRC_DIR=$(srcdir) $(RUBY) $^ hipinterval > $@
-
-babeltrace_hipinterval.h: $(top_srcdir)/xprof/interval.h.erb
-	$(ERB) namespace="hipinterval" $< > $@
-
-babeltrace_hipinterval.c: $(top_srcdir)/xprof/interval.c.erb
-	$(ERB) namespace="hipinterval" $< > $@
-
 xprof_utils.cpp: $(top_srcdir)/utils/xprof_utils.cpp
 	cp $< $@
 
 xprof_utils.hpp: $(top_srcdir)/utils/xprof_utils.hpp
 	cp $< $@
 
-EXTRA_DIST += \
-	gen_hipinterval_callbacks.rb \
-	hipinterval_callbacks.cpp.erb
-
 CLEANFILES += \
-	babeltrace_hipinterval_callbacks.cpp \
-	babeltrace_hipinterval_callbacks.h \
-	babeltrace_hipinterval_dispatchers.c \
-	babeltrace_hipinterval_emitter.h \
-	babeltrace_hipinterval.h \
-	babeltrace_hipinterval.c \
+	$(BTX_TALLY_GENERATED) \
 	xprof_utils.cpp \
 	xprof_utils.hpp
 
-BUILT_SOURCES += \
-	babeltrace_hipinterval.h \
-	babeltrace_hipinterval_callbacks.h \
-	babeltrace_hipinterval_emitter.h \
-	xprof_utils.hpp
-
 nodist_libHIPInterval_la_SOURCES = \
-	babeltrace_hipinterval.c \
-	babeltrace_hipinterval.h \
-	babeltrace_hipinterval_callbacks.h \
-	babeltrace_hipinterval_dispatchers.c \
-	babeltrace_hipinterval_callbacks.cpp \
-	babeltrace_hipinterval_emitter.h \
 	xprof_utils.hpp \
 	xprof_utils.cpp
 
 libHIPInterval_la_SOURCES = \
-	hipinterval_callbacks.hpp
+	$(BTX_HIP_GENERATED) \
+	btx_hipinterval_callbacks.cpp \
+	btx_hipinterval_callbacks.hpp
 
-libHIPInterval_la_CPPFLAGS = -I$(top_srcdir)/utils -I$(top_srcdir)/utils/include -I$(srcdir)/include -I./
+libHIPInterval_la_CPPFLAGS = -I$(top_srcdir)/utils -I$(top_srcdir)/utils/include -I$(srcdir)/include -I./ -I./btx_filter_hip
 libHIPInterval_la_CFLAGS = -Wall -Wextra -Wno-unused-parameter $(WERROR) $(BABELTRACE2_CFLAGS)
 libHIPInterval_la_CXXFLAGS = -std=c++17 -Wall -Wextra -Wno-unused-parameter $(WERROR) $(BABELTRACE2_CFLAGS)
 libHIPInterval_la_LDFLAGS = $(BABELTRACE2_LIBS) -avoid-version -module
