Update to metababel 1.0.0 and generate model from script

--- a/hip/Makefile.am
+++ b/hip/Makefile.am
@@ -160,12 +160,17 @@ BTX_HIP_GENERATED = \
 	btx_filter_hip/btx_main.c
 
 EXTRA_DIST = \
-	btx_model.yaml \
 	btx_interval_model.yaml \
-	btx_callbacks.yaml
+	btx_matching_model.yaml
 
-$(BTX_HIP_GENERATED) &: btx_model.yaml btx_interval_model.yaml btx_callbacks.yaml
-	$(METABABEL) -u $(srcdir)/btx_model.yaml -d $(srcdir)/btx_interval_model.yaml -t FILTER -o btx_filter_hip -p hipinterval -c interval --callbacks $(srcdir)/btx_callbacks.yaml -i hip.h.include
+babeltrace_to_metababel_model.rb: $(top_srcdir)/utils/babeltrace_to_metababel_model.rb
+	cp $< $@
+
+btx_model.yaml: babeltrace_to_metababel_model.rb hip_babeltrace_model.yaml
+	$(RUBY) $^ > $@
+
+$(BTX_HIP_GENERATED) &: btx_interval_model.yaml btx_matching_model.yaml btx_model.yaml
+	$(METABABEL) -u btx_model.yaml -d $(srcdir)/btx_interval_model.yaml -t FILTER -o btx_filter_hip -p hipinterval -c interval --matching $(srcdir)/btx_matching_model.yaml -i hip.h.include
 
 $(MODIFIED_HIP_HDR) &: $(HIP_HDR) $(srcdir)/headers.patch
 	$(RM) -r modified_include/
