Support for utilization metrics (#153)
* Support for utilization metrics

* Update ze/tracer_ze_helpers.include.c

Co-authored-by: Brice Videau <bvideau@anl.gov>

* Apply suggestions from code review

Co-authored-by: Brice Videau <bvideau@anl.gov>

* sysman-metrics updated

* Update ze/tracer_ze_helpers.include.c

* tracepoint_enabled check added

* Apply suggestions from code review

Co-authored-by: Brice Videau <bvideau@anl.gov>

* Suggestions incorporated

* Separation of initialization

* Apply suggestions from code review

Suggestions added

Co-authored-by: Brice Videau <bvideau@anl.gov>

* Support for utilization metrics

* Update ze/tracer_ze_helpers.include.c

Co-authored-by: Brice Videau <bvideau@anl.gov>

* Apply suggestions from code review

Co-authored-by: Brice Videau <bvideau@anl.gov>

* sysman-metrics updated

* Update ze/tracer_ze_helpers.include.c

* tracepoint_enabled check added

* Apply suggestions from code review

Co-authored-by: Brice Videau <bvideau@anl.gov>

* Suggestions incorporated

* Separation of initialization

* Apply suggestions from code review

Suggestions added

Co-authored-by: Brice Videau <bvideau@anl.gov>

* subDevice Handled

* Multi-driver support

* EngineProps and Subdevice Handled

* Index consistancy maintianed

* Templated

---------

Co-authored-by: sbekele <solo2abera@gmail.com>
Co-authored-by: Brice Videau <bvideau@anl.gov>
Co-authored-by: Thomas Applencourt <TApplencourt@users.noreply.github.com>

--- a/xprof/btx_interval_model.yaml
+++ b/xprof/btx_interval_model.yaml
@@ -127,3 +127,39 @@
                 :type: integer_unsigned
                 :field_value_range: 64
                 :cast_type: uint64_t
+      - :name: lttng:computeEU
+        :payload_field_class:
+          :type: structure
+          :members:
+            - :name: did
+              :field_class:
+                :type: integer_unsigned
+                :field_value_range: 64
+                :cast_type: uint64_t
+            - :name: subDevice
+              :field_class:
+                :type: integer_unsigned
+                :field_value_range: 32
+                :cast_type: uint32_t
+            - :name: activeTime
+              :field_class:
+                :type: single
+                :cast_type: float
+      - :name: lttng:copyEU
+        :payload_field_class:
+          :type: structure
+          :members:
+            - :name: did
+              :field_class:
+                :type: integer_unsigned
+                :field_value_range: 64
+                :cast_type: uint64_t
+            - :name: subDevice
+              :field_class:
+                :type: integer_unsigned
+                :field_value_range: 32
+                :cast_type: uint32_t
+            - :name: activeTime
+              :field_class:
+                :type: single
+                :cast_type: float
