Move btx_interval model to utils

--- a/xprof/Makefile.am
+++ b/xprof/Makefile.am
@@ -46,14 +46,14 @@ BTX_AGGREG_GENERATED = \
         btx_filter_aggreg/metababel/btx_downstream.c \
         btx_filter_aggreg/btx_main.c
 
-$(BTX_TIMELINE_GENERATED) &: btx_interval_model.yaml btx_timeline_params.yaml
-	$(METABABEL) -u $(srcdir)/btx_interval_model.yaml -t SINK -o btx_sink_timeline -p btx_timeline -c timeline --params $(srcdir)/btx_timeline_params.yaml
+$(BTX_TIMELINE_GENERATED) &: $(top_srcdir)/utils/btx_interval_model.yaml btx_timeline_params.yaml
+	$(METABABEL) -u $(top_srcdir)/utils/btx_interval_model.yaml -t SINK -o btx_sink_timeline -p btx_timeline -c timeline --params $(srcdir)/btx_timeline_params.yaml
 
 $(BTX_TALLY_GENERATED) &: btx_aggreg_model.yaml btx_tally_params.yaml
 	$(METABABEL) -u $(srcdir)/btx_aggreg_model.yaml -t SINK -o btx_sink_tally -p btx_tally -c tally --params $(srcdir)/btx_tally_params.yaml
 
-$(BTX_AGGREG_GENERATED) &: btx_interval_model.yaml btx_aggreg_model.yaml btx_aggreg_params.yaml
-	$(METABABEL) -u $(srcdir)/btx_interval_model.yaml -d $(srcdir)/btx_aggreg_model.yaml -t FILTER -o btx_filter_aggreg -p btx_aggreg -c aggreg --params $(srcdir)/btx_aggreg_params.yaml
+$(BTX_AGGREG_GENERATED) &: $(top_srcdir)/utils/btx_interval_model.yaml btx_aggreg_model.yaml btx_aggreg_params.yaml
+	$(METABABEL) -u $(top_srcdir)/utils/btx_interval_model.yaml -d $(srcdir)/btx_aggreg_model.yaml -t FILTER -o btx_filter_aggreg -p btx_aggreg -c aggreg --params $(srcdir)/btx_aggreg_params.yaml
 
 BUILT_SOURCES = \
 	$(BTX_TALLY_GENERATED) \
@@ -159,7 +159,7 @@ data_DATA = \
 EXTRA_DIST = \
 	interval.c.erb \
 	interval.h.erb \
-	btx_interval_model.yaml \
+	$(top_srcdir)/utils/btx_interval_model.yaml \
         btx_aggreg_model.yaml \
 	interval_model.yaml \
 	btx_timeline_params.yaml \
