Reuse btx_interval from utils

--- a/hip/Makefile.am
+++ b/hip/Makefile.am
@@ -161,7 +161,7 @@ BTX_HIP_GENERATED = \
 
 EXTRA_DIST = \
 	$(top_srcdir)/utils/babeltrace_to_metababel_model.rb \
-	btx_interval_model.yaml \
+	$(top_srcdir)/utils/btx_interval_model.yaml \
 	btx_matching_model.yaml
 
 CLEANFILES = \
@@ -170,8 +170,8 @@ CLEANFILES = \
 btx_model.yaml: $(top_srcdir)/utils/babeltrace_to_metababel_model.rb hip_babeltrace_model.yaml
 	SRC_DIR=$(srcdir) $(RUBY) $^ > $@
 
-$(BTX_HIP_GENERATED) &: btx_interval_model.yaml btx_matching_model.yaml btx_model.yaml
-	$(METABABEL) -u btx_model.yaml -d $(srcdir)/btx_interval_model.yaml -t FILTER -o btx_filter_hip -p hipinterval -c interval --matching $(srcdir)/btx_matching_model.yaml -i hip.h.include
+$(BTX_HIP_GENERATED) &: $(top_srcdir)/utils/btx_interval_model.yaml btx_matching_model.yaml btx_model.yaml
+	$(METABABEL) -u btx_model.yaml -d $(top_srcdir)/utils/btx_interval_model.yaml -t FILTER -o btx_filter_hip -p hipinterval -c interval --matching $(srcdir)/btx_matching_model.yaml -i hip.h.include
 
 $(MODIFIED_HIP_HDR) &: $(HIP_HDR) $(srcdir)/headers.patch
 	$(RM) -r modified_include/
