--- a/ze/btx_zematching_model.yaml
+++ b/ze/btx_zematching_model.yaml
@@ -69,7 +69,7 @@
       - :name: ^zeResult$
       - :name: pptr_val
 
-# We handle the exits separatly
+# We handle the exits separately
   - :set_id: zeModule_entry
     :domain: entries
     :name : "zeModuleGetGlobalPointer|zeModuleDestroy"
@@ -105,7 +105,7 @@
       :members:
       - :name: ^hCommandList$
       - :name: ^hKernel$
-#Data Transfert (profiling + traffc)
+#Data Transferred (profiling + traffc)
   - :set_id: hSignalEvent_eventMemory_entry
     :domain: hSignalEvent_entry
     :name: "zeCommandListAppendMemory"
@@ -127,8 +127,8 @@
       - :name: ^hCommandList$
       - :name: ^ptr$
       - :name: ^size$
-## Rest of Trafic
-  - :set_id: eventMemory_wihout_hSignalEvent_entry
+## Rest of Traffic
+  - :set_id: eventMemory_without_hSignalEvent_entry
     :name: "Memory"
     :domain: |
       entries - ( hSignalEvent_eventMemory_2ptr_entry + hSignalEvent_eventMemory_1ptr_entry )
