--- a/hip/btx_hipmatching_model.yaml
+++ b/hip/btx_hipmatching_model.yaml
@@ -16,11 +16,9 @@
   :event_classes:
   - :set_id: entries
     :name: "_entry$"
-
   - :set_id: all_exits
     :register: false
     :name: "_exit$"
-
   - :set_id: exits_hipError_present
     :name: "_exit$"
     :payload_field_class:
@@ -30,8 +28,6 @@
         :field_class:
           :type: integer_signed
           :cast_type: ^hipError_t$
-
   - :set_id: exits_hipError_absent
     :name: "_exit$"
-    :domain: |
-      all_exits - exits_hipError_present 
+    :domain: all_exits - exits_hipError_present
